Remove Rom and Ram in favour of direct implementation of Memory
Memory has been implemented for `&[u8]` and `&mut [u8]`, but also
`Vec<u8>` and `Box<[u8]>` behind a new feature flag `alloc`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ repository = "https://github.com/chrjen/fast6502/"
 version = "0.1.0"
 
 [dependencies]
+
+[features]
+alloc = []
+default = ["alloc"]
